<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="where_do_you_want_to_go">Where do \nyou want to go?</string>
    <string name="iv_search_hint">Discover a country</string>
    <string name="title_explore_countries">Explore countries</string>
    <string name="data_not_loaded_text">Data not loaded</string>
    <string name="no_search_result_text">No results found</string>
    <string name="languages">Languages</string>
    <string name="official">Official</string>
    <string name="weather">Weather</string>
    <string name="vaccination">Vaccination</string>
    <string name="advices">Advices</string>
    <string name="electricity">Electricity</string>
    <string name="voltage">Voltage: <b>%1$s V</b></string>
    <string name="plug_types">Plug types: <b>%1$s</b></string>
    <string name="currency">Currency</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="calling_code">Calling code: <b>%1$s</b></string>
    <string name="ambulance">Ambulance: <b>%1$s</b></string>
    <string name="police">Police: <b>%1$s</b></string>
    <string name="fire">Fire: <b>%1$s</b></string>
    <string name="water">Water</string>
    <string name="no_water_info">No info about water</string>
    <string name="permission_error_message">Please approve all permissions</string>
    <string name="snackbar_ok_button">OK</string>
    <string name="error_country_loading">Error is occurred. Please, check internet connection and try again</string>
    <string name="error_dialog_button_ok">OK</string>
</resources>