<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fitsSystemWindows="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_height="280dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:contentScrim="@color/white">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_image_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal|bottom"
                android:background="@null"
                app:tabBackground="@drawable/selector_tab_indicator"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"/>

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="68dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_arrow_back"
                android:background="@drawable/bg_square_fab" />

            <ImageButton
                android:id="@+id/button_bookmark"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/ic_bookmark_off"
                android:background="@drawable/bg_square_fab" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="40dp"
            android:paddingBottom="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:orientation="vertical"
            android:background="@drawable/bg_layout_rounded_top"
            tools:context=".ui.country_detail.CountryDetailFragment">

            <TextView
                android:id="@+id/tv_country_name"
                style="@style/titleText"
                android:textSize="28sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                tools:text="Belarus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_map_link"
                style="@style/regularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColor="#316BFF"
                tools:text="Minsk, Belarus, BY"
                app:drawableStartCompat="@drawable/ic_location_marker_filled"
                android:drawablePadding="2dp"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="6dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <org.osmdroid.views.MapView
                    android:id="@+id/map_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_languages_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/languages"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rv_item_language"
                tools:itemCount="5"/>

            <TextView
                android:id="@+id/tv_weather_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/weather" />

            <com.coldfier.feature_countries.ui.country_detail.WeatherGraphView
                android:id="@+id/view_weather_diagram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp" />

            <TextView
                android:id="@+id/vaccination_title"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/vaccination" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_vaccination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rv_item_vaccination"
                tools:itemCount="3"/>

            <TextView
                android:id="@+id/tv_water_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/water" />

            <TextView
                android:id="@+id/tv_water"
                style="@style/regularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe Safe "/>

            <TextView
                android:id="@+id/tv_advices_title"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/advices" />

            <TextView
                android:id="@+id/tv_ca_advice"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="CA: Country recommended to travel  Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel" />

            <TextView
                android:id="@+id/tv_ua_advice"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="UA: Country recommended to travel  Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel Country recommended to travel" />

            <TextView
                android:id="@+id/tv_electricity_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/electricity" />

            <TextView
                android:id="@+id/tv_voltage"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/voltage"/>

            <TextView
                android:id="@+id/tv_plug_types"
                style="@style/regularText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/plug_types" />

            <TextView
                android:id="@+id/tv_currency_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/currency" />

            <TextView
                android:id="@+id/tv_currency_name"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Belarusian ruble, BYN" />

            <TextView
                android:id="@+id/tv_phone_numbers_title"
                style="@style/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_numbers" />

            <TextView
                android:id="@+id/tv_calling_code"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/calling_code"/>

            <TextView
                android:id="@+id/tv_ambulance"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambulance" />

            <TextView
                android:id="@+id/tv_police"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police" />

            <TextView
                android:id="@+id/tv_fire"
                style="@style/regularText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fire" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>