<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.countries_list.CountriesListFragment">

    <TextView
        android:id="@+id/tv_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sofia_pro_regular"
        android:letterSpacing="0.0"
        android:text="@string/where_do_you_want_to_go"
        android:textColor="#4F5B67"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_user_avatar_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_user_avatar_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_avatar_container"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_user_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user_avatar_placeholder"/>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/iv_search"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingStart="16dp"
        android:elevation="5dp"
        android:background="@drawable/bg_search_field"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:fontFamily="@font/sofia_pro_regular"
        android:hint="@string/iv_search_hint"
        android:textColorHint="#CCCCCC"
        android:textColor="#4F5B67"
        android:textSize="18sp"
        android:letterSpacing="0.0"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_head" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/sofia_pro_regular"
        android:text="@string/title_explore_countries"
        android:textColor="#4F5B67"
        android:textSize="20sp"
        android:letterSpacing="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_countries"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:listitem="@layout/rv_item_country"/>
</androidx.constraintlayout.widget.ConstraintLayout>